Initialized styling from https://www.w3schools.com/css/tryit.asp?filename=trycss_template1_flexbox

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <meta name="description" content="Dice Roller for Shadowrun">
   <meta name="author" content="Navras Kamal">
 
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <script src="main.js"></script>
+  <div class="header"><h2>ShadowRoller</h2></div>
 </body>
 </html>
