--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>ShadowRoller</title>
+  <title>ShadowR0LLER</title>
   <meta name="description" content="Dice Roller for Shadowrun">
   <meta name="author" content="Navras Kamal">
 
